--- a/consulta.html
+++ b/consulta.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Sistema de Consulta de Moedas: Coleção Numismática Zanoni</h2>
-        <select id="tabelaSelect" onchange="buscarDados()">
+        <select id="tabelaSelecionada" onchange="buscarDados()">
 
             <option value="">Selecione uma Tabela</option>
             <option value="cobre">Moedas de Cobre do Brasil</option>
@@ -68,6 +68,9 @@
     </ul>
 </div>
 <!-- Final DO CÓDIGO DO BOTÃO DE ORIENTAÇÕES-->
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 
     <script src="script.js"></script>
