--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COLEÇÃO NUMISMÁTICA ZANONI: AMBIENTE DE LOGIN.</title>
-
-    <style>
+    
+<style>
 
 /* Estilos gerais */
 body {
@@ -71,13 +71,14 @@ footer {
 }
 
 footer img {
-    width: 20px;
-    height: auto;
+    width: 100px; /* Aumente este valor conforme necessário */
+    height: auto; /* Mantém a proporção original */
     vertical-align: middle;
 }
 
-        
-    </style>
+
+</style>
+
 
 </head>
 <body>
@@ -94,7 +95,7 @@ footer img {
     <center>
         <i>
         <footer>
-            <p>Site desenvolvido por Juliano <img src="https://d1yei2z3i6k35z.cloudfront.net/6946809/65e45ac72773e_zanoni.1.png" alt="Logo de Juliano Zanoni"></p>
+            <p>Web programa desenvolvido por Juliano <img src="https://d1yei2z3i6k35z.cloudfront.net/6946809/65e45ac72773e_zanoni.1.png" alt="Logo de Juliano Zanoni"></p>
         </footer>
         </i>
     </center>
