--- a/consulta.html
+++ b/consulta.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consulta de Tabelas</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Consulta de Tabelas</h1>
+  <h1>EXPOSICÃO NUMISMÁTICA DESCRITIVA: COLEÇÃO NUMISMÁTICA ZANONI.</h1>
   <form id="searchForm">
-    <label for="tableName">Nome da Tabela:</label>
-    <input type="text" id="tableName" name="tableName" required>
+    <label for="tableName">Campo para consulta:</label>
+    <input type="text" id="tableName" name="tableName" required autocomplete="off">
+    
+<!--INÍCIO DO CÓDIGO DE BOTÕES-->
+
     <button type="submit">Pesquisar</button>
+    <button onclick="carregarPagina()">Carregar Para Nova Pesquisa</button>
+    <div id="resposta"></div>
+    <button class="chat-button" id="btnOrientacoes">Explicações/Coleção Numismática Zanoni</button>
+    <button onclick="logout()">Sair</button>
+
+<p>Para ver as listagens da coleção pesquisa por: <b>cobre, prata, bronze, niquel, outros, real, escassas, anomalas e duplos</b> (mas sem acentos).</p>
+
+<!--FINAL DO CÓDIGO DE BOTÕES-->
+
   </form>
   <div id="results">
     <table>
@@ -25,25 +37,26 @@
           <th>Valor</th>
         </tr>
       </thead>
-      <tbody id="resultsBody">
+      <tbody id="resultsBody"> 
         <!-- Os resultados serão inseridos aqui -->
       </tbody>
     </table>
   </div>
 
+ 
+
     <!--INICIO DO CÓDIGO DO BOTÃO DE ORIENTAÇÕES-->
 
 <div id="manual" class="manual">
     <button class="chat-button" id="btnFechar">✖</button>
-    <h2>Explicação do Coleção Inventáriada</h2>
+    <h2>Explicação do Coleção Zanoni Inventáriada que foi iniciada no ano de 1998.</h2>
     <ul>
-        <li>✔ Passo 1: </li>
-        <li>✔ Passo 2: </li>
-        <li>✔ Passo 3: </li>
-        <li>✔ Passo 4: </li>
-        <li>✔ Passo 5: </li> 
-        <li>✔ Passo 6: </li>
-        <li>✔ Passo 7: </li>
+        <li>✔ Passo 1: A coleção está divida em eixos numismáticos brasileiros, os quais são: cobre (moedas de cobre do Brasil Colonial ao período Imperial), prata (moedas de cobre do Brasil Colonial ao período da República Velha), bronze (moedas de cobre do Brasil imperial ao período da República Velha), níquel (moedas de cobre do Brasil imperial ao período da República Velha), outros (que se refere as moedas de réis comuns até o plano monetário antes do Plano Real), real (as moedas comuns do Plano Real), escassas (as moedas de circulação de menor cunhagem do Plano Real), anômalas (as moedas com defeitos de anômilias variadas do Plano Real, menos cunhos duplos), duplos (que contempla apenas exemplares do Plano Real).</li>
+        <li>✔ Passo 2: As moedas de cobre, prata, níquel, bronze e outros estão catalogadas pela número do catálogo do autor Claudio Amato, mas foram avaliadas pelo catalo do autor Vieira referente a última edição de 2004</li>
+        <li>✔ Passo 3: As moedas anômalas tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
+        <li>✔ Passo 4: As moedas de cunho duplo  tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
+        <li>✔ Passo 5: Observação que a coleção numismática tem eixo no tocante a fichas que ainda está na fase de iventário.</li> 
+        <li>✔ Passo 6: O valor atual apurado das coleções nesse momento é de: moedas de cobre - R$ 34.240,00, moedas de prata -  R$ 31.135,00, moedas de brozne -  R$ 1.875,00, moedas de níquel -  R$ 2.055,00, moedas de outros planos moneários -  R$ 1.252,00, moedas do plano real (comuns) -  R$ 1.346,00, moedas anômalas (plano real) -  R$ 8.615,75 e moedas com cunho duplo (plano real) -  R$ 17.280,00. Em suma a coleção numismática na data do dia 01/03/2025 assume o valor atualizado de R$ 97.798,75.</li>
     </ul>
 </div>
 <!-- Final DO CÓDIGO DO BOTÃO DE ORIENTAÇÕES-->
@@ -53,7 +66,7 @@
     <center>
         <i>
         <footer>
-            <p>Site desenvolvido por Juliano <img src="https://d1yei2z3i6k35z.cloudfront.net/6946809/65e45ac72773e_zanoni.1.png" alt="Logo de Juliano Zanoni"></p>
+            <p>Web programa desenvolvido por Juliano <img src="https://d1yei2z3i6k35z.cloudfront.net/6946809/65e45ac72773e_zanoni.1.png" alt="Logo de Juliano Zanoni"></p>
         </footer>
         </i>
     </center>
