--- a/consulta.html
+++ b/consulta.html
@@ -20,7 +20,7 @@
     <button class="chat-button" id="btnOrientacoes">Explicações/Coleção Numismática Zanoni</button>
     <button onclick="logout()">Sair</button>
 
-<p>Para ver as listagens da coleção pesquisa por: <b>cobre, prata, bronze, niquel, outros, real, escassas, anomalas e duplos</b> (mas sem acentos).</p>
+<p>Para ver as listagens da coleção pesquisa por: <b>cobre, prata, bronze, niquel, outros, real, escassas, anomalas_1, anomalas_2 e duplos</b> (mas sem acentos).</p>
 
 <!--FINAL DO CÓDIGO DE BOTÕES-->
 
@@ -51,7 +51,7 @@
     <button class="chat-button" id="btnFechar">✖</button>
     <h2>Explicação do Coleção Zanoni Inventáriada que foi iniciada no ano de 1998.</h2>
     <ul>
-        <li>✔ Passo 1: A coleção está divida em eixos numismáticos brasileiros, os quais são: cobre (moedas de cobre do Brasil Colonial ao período Imperial), prata (moedas de cobre do Brasil Colonial ao período da República Velha), bronze (moedas de cobre do Brasil imperial ao período da República Velha), níquel (moedas de cobre do Brasil imperial ao período da República Velha), outros (que se refere as moedas de réis comuns até o plano monetário antes do Plano Real), real (as moedas comuns do Plano Real), escassas (as moedas de circulação de menor cunhagem do Plano Real), anômalas (as moedas com defeitos de anômilias variadas do Plano Real, menos cunhos duplos), duplos (que contempla apenas exemplares do Plano Real).</li>
+        <li>✔ Passo 1: A coleção está divida em eixos numismáticos brasileiros, os quais são: cobre (moedas de cobre do Brasil Colonial ao período Imperial), prata (moedas de cobre do Brasil Colonial ao período da República Velha), bronze (moedas de cobre do Brasil imperial ao período da República Velha), níquel (moedas de cobre do Brasil imperial ao período da República Velha), outros (que se refere as moedas de réis comuns até o plano monetário antes do Plano Real), real (as moedas comuns do Plano Real), escassas (as moedas de circulação de menor cunhagem do Plano Real), anômalas_1 (é uma coleção composta por exemplares de moedas anômalas, mas composta por moedas de planos monetários anteriores ao Plano Real), anômalas_2 (as moedas com defeitos de anômilias variadas do Plano Real, menos cunhos duplos), duplos (que contempla apenas exemplares do Plano Real).</li>
         <li>✔ Passo 2: As moedas de cobre, prata, níquel, bronze e outros estão catalogadas pela número do catálogo do autor Claudio Amato, mas foram avaliadas pelo catalo do autor Vieira referente a última edição de 2004</li>
         <li>✔ Passo 3: As moedas anômalas tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
         <li>✔ Passo 4: As moedas de cunho duplo  tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
