--- a/consulta.html
+++ b/consulta.html
@@ -20,7 +20,7 @@
     <button class="chat-button" id="btnOrientacoes">Explicações/Coleção Numismática Zanoni</button>
     <button onclick="logout()">Sair</button>
 
-<p>Para ver as listagens da coleção pesquisa por: <b>cobre, prata, bronze, niquel, outros, real, escassas, anomalas_1, anomalas_2 e duplos</b> (mas sem acentos).</p>
+<p>Para ver as listagens da coleção pesquisa por: <b>anomalas_1, anomalas_2, bronze, cobre, duplos, escassas, fichas, niquel, outros, prata e real.</b> (mas sem acentos).</p>
 
 <!--FINAL DO CÓDIGO DE BOTÕES-->
 
@@ -29,7 +29,7 @@
     <table>
       <thead>
         <tr>
-          <th>Resultado</th>
+          <th>Nº</th>
           <th>Data</th>
           <th>Facial</th>
           <th>Estado</th>
