--- a/consulta.html
+++ b/consulta.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>EXPOSICÃO NUMISMÁTICA DESCRITIVA: COLEÇÃO NUMISMÁTICA ZANONI.</h1>
+  <h1>EXPOSICÃO NUMISMÁTICA DA COLEÇÃO: ZANONI.</h1>
   <form id="searchForm">
     <label for="tableName">Campo para consulta:</label>
     <input type="text" id="tableName" name="tableName" required autocomplete="off">
