--- a/consulta.html
+++ b/consulta.html
@@ -56,7 +56,7 @@
         <li>✔ Passo 3: As moedas anômalas tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
         <li>✔ Passo 4: As moedas de cunho duplo  tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
         <li>✔ Passo 5: Observação que a coleção numismática tem eixo no tocante a fichas que ainda está na fase de iventário.</li> 
-        <li>✔ Passo 6: O valor atual apurado das coleções nesse momento é de: moedas de cobre - R$ 34.800,00, moedas de prata -  R$ 31.135,00, moedas de brozne -  R$ 1.875,00, moedas de níquel -  R$ 2.055,00, moedas de outros planos moneários -  R$ 1.252,00, moedas do plano real (comuns) -  R$ 1.346,00, moedas anômalas (plano real) -  R$ 8.665,75 e moedas com cunho duplo (plano real) -  R$ 17.280,00. Em suma a coleção numismática na data do dia 01/03/2025 assume o valor atualizado de R$ 98.408,75.</li>
+        <li>✔ Passo 6: O valor atual apurado das coleções nesse momento é de: moedas de cobre - R$ 35.260,00 moedas de prata -  R$ 31.855,00 moedas de brozne -  R$ 1.875,00 moedas de níquel -  R$ 2.055,00, moedas de outros planos moneários -  R$ 1.252,00, moedas do plano real (comuns) -  R$ 1.366,00, moedas anômalas (Plano Real) -  R$ 8.665,75 e moedas com cunho duplo (Plano Real) -  R$ 17.330,00. Em suma a coleção numismática na data do dia 01/03/2025 assume o valor atualizado de R$ 99.658,75.</li>
     </ul>
 </div>
 <!-- Final DO CÓDIGO DO BOTÃO DE ORIENTAÇÕES-->
