--- a/consulta.html
+++ b/consulta.html
@@ -20,7 +20,7 @@
     <button class="chat-button" id="btnOrientacoes">Explicações/Coleção Numismática Zanoni</button>
     <button onclick="logout()">Sair</button>
 
-<p>Para ver as listagens da coleção pesquisa por: <b>anomalas_1, anomalas_2, bronze, cobre, duplos, escassas, fichas, niquel, outros, prata e real.</b> (mas sem acentos).</p>
+<p>Para ver as listagens da coleção pesquisa por: <b>anomalas_1, anomalas_2, bronze, cobre, duplos, escassas, fichas, niquel, outros, prata, real e real_venda.</b> (mas sem acentos).</p>
 
 <!--FINAL DO CÓDIGO DE BOTÕES-->
 
@@ -56,7 +56,7 @@
         <li>✔ Passo 3: As moedas anômalas tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
         <li>✔ Passo 4: As moedas de cunho duplo  tiveram a sua cotação apurada com a apuração comprativa nos preços utilizados por comerciamentes de lojas numismáticas referente a valores praticados no ano de 2024.</li>
         <li>✔ Passo 5: Observação que a coleção numismática tem eixo no tocante a fichas que ainda está na fase de iventário.</li> 
-        <li>✔ Passo 6: O valor atual apurado das coleções nesse momento é de: moedas de cobre - R$ 35.260,00 moedas de prata -  R$ 31.855,00 moedas de brozne -  R$ 1.875,00 moedas de níquel -  R$ 2.055,00, moedas de outros planos moneários -  R$ 1.252,00, moedas do plano real (comuns) -  R$ 1.366,00, moedas anômalas (Plano Real) -  R$ 8.665,75 e moedas com cunho duplo (Plano Real) -  R$ 17.330,00. Em suma a coleção numismática na data do dia 01/03/2025 assume o valor atualizado de R$ 99.658,75.</li>
+        <li>✔ Passo 6: O valor atual apurado das coleções nesse momento é de: moedas de cobre - R$ 35.130,00 moedas de prata -  R$ 31.955,00 moedas de brozne -  R$ 1.875,00 moedas de níquel -  R$ 2.055,00, moedas de outros planos moneários -  R$ 1.252,00, moedas do plano real (comuns) -  R$ 1.366,00, moedas anômalas (Plano Real) -  R$ 8.665,75,  moedas com cunho duplo (Plano Real) -  R$ 17.330,00 e moedas repetidas do Plano a Real a venda R$ 17.676,00. Em suma a coleção numismática na data do dia 17/08/2025 assume o valor atualizado de R$ 117.404,75.</li>
     </ul>
 </div>
 <!-- Final DO CÓDIGO DO BOTÃO DE ORIENTAÇÕES-->
